cmake_minimum_required(VERSION 3.26)
project(plotmax2507)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(${PROJECT_SOURCE_DIR}/1.two_sum)
add_subdirectory(${PROJECT_SOURCE_DIR}/9.palindrome_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/13.roman_to_integer)
add_subdirectory(${PROJECT_SOURCE_DIR}/14.longest_common_prefix)
add_subdirectory(${PROJECT_SOURCE_DIR}/20.valid_parentheses)
add_subdirectory(${PROJECT_SOURCE_DIR}/21.merge_two_sorted_lists)
add_subdirectory(${PROJECT_SOURCE_DIR}/26.remove_duplicates_from_sorted_array)
add_subdirectory(${PROJECT_SOURCE_DIR}/27.remove_element)
add_subdirectory(${PROJECT_SOURCE_DIR}/28.find_the_index_of_the_first_occurrence_in_a_string)
add_subdirectory(${PROJECT_SOURCE_DIR}/35._search_insert_position)
add_subdirectory(${PROJECT_SOURCE_DIR}/58.length_of_last_word)
add_subdirectory(${PROJECT_SOURCE_DIR}/66.plus_one)
add_subdirectory(${PROJECT_SOURCE_DIR}/67.add_binary)
add_subdirectory(${PROJECT_SOURCE_DIR}/69.sqrt_x)
add_subdirectory(${PROJECT_SOURCE_DIR}/70.climbing_stairs)
add_subdirectory(${PROJECT_SOURCE_DIR}/83.remove_duplicates_from_sorted_list)
add_subdirectory(${PROJECT_SOURCE_DIR}/88.merge_sorted_array)
add_subdirectory(${PROJECT_SOURCE_DIR}/94.binary_tree_inorder_traversal)
add_subdirectory(${PROJECT_SOURCE_DIR}/100.same_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/101.symmetric_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/104.maximum_depth_of_binary_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/108.convert_sorted_array_to_binary_search_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/110.balanced_binary_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/111.minimum_depth_of_binary_tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/112.path_sum)
add_subdirectory(${PROJECT_SOURCE_DIR}/118.pascals_triangle)
add_subdirectory(${PROJECT_SOURCE_DIR}/119.pascals_triangleII)
add_subdirectory(${PROJECT_SOURCE_DIR}/121.best_time_to_buy_and_sell_stock)
add_subdirectory(${PROJECT_SOURCE_DIR}/125.valid_palindrome)
add_subdirectory(${PROJECT_SOURCE_DIR}/136.single_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/141.linked_list_cycle)
add_subdirectory(${PROJECT_SOURCE_DIR}/144.binary_tree_preorder_traversal)
add_subdirectory(${PROJECT_SOURCE_DIR}/145.binary_tree_postorder_traversal)
add_subdirectory(${PROJECT_SOURCE_DIR}/160.intersection_of_two_linked_lists)
add_subdirectory(${PROJECT_SOURCE_DIR}/169.majority_element)
add_subdirectory(${PROJECT_SOURCE_DIR}/171.excel_sheet_column_number)
add_subdirectory(${PROJECT_SOURCE_DIR}/175.combine_two_tables)
add_subdirectory(${PROJECT_SOURCE_DIR}/181.employees_earning_more_than_their_managers)
add_subdirectory(${PROJECT_SOURCE_DIR}/182.duplicate_emails)
add_subdirectory(${PROJECT_SOURCE_DIR}/183.customers_who_never_order)

#add_executable(plotmax2507 main.cpp)
